Migrate released artillery configs